Fixes for logo display
Fixing a standard size that is too small

--- a/js/src/App.css
+++ b/js/src/App.css
@@ -1,3 +1,15 @@
+/*
+* Fixes for logo desing
+*/
+.euiHeaderLogo .euiHeaderLogo__icon {
+    height: 60px;
+    widht: 60px;
+}
+
+.euiHeaderLogo .euiHeaderLogo__text {
+    padding-left: 10px;
+}
+
 .sub-table {
     margin: 0.3em 0 0.7em 2.5em;
 }
